fix db context identity

--- a/parc_informatique/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/parc_informatique/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using ParcInformatique.Web.Areas.Identity
 @using ParcInformatique.Web.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using ParcInformatique.Data.Entities
